added fix for array index out of bound